Actions
Bug #9789
closedloader: tftp should not read past file end
Start date:
2018-09-04
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
When we have received file size option (tsize), use it to limit the read size.
Updated by Electric Monk over 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 2017dcb08b21dd2f977954ddb50394ba3010137c
commit 2017dcb08b21dd2f977954ddb50394ba3010137c Author: Toomas Soome <tsoome@me.com> Date: 2018-09-21T18:44:40.000Z 9789 loader: tftp should not read past file end Reviewed by: Garrett D'Amore <garrett@damore.org> Reviewed by: Andy Fiddaman <omnios@citrus-it.co.uk> Reviewed by: Igor Kozhukhov <igor@dilos.org> Approved by: Robert Mustacchi <rm@joyent.com>
Actions